gac_sb/objects/Prevision_encaissement__c.object
<CustomObject>
    <description>SF CONSULTING - permet de saisir des prévisions d&apos;encaissement</description>
    <fields>
        <fullName>Date_prevue__c</fullName>
        <label>Date prévue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facture__c</fullName>
        <label>Facture</label>
        <referenceTo>Facture__c</referenceTo>
        <relationshipLabel>Prévisions d&apos;encaissement</relationshipLabel>
        <relationshipName>Pr_visions_d_encaissement</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Montant_prevu_HT__c</fullName>
        <formula>Montant_prevu_TTC__c  / (1+ Facture__r.Taux_TVA__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant prévu HT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_prevu_TTC__c</fullName>
        <label>Montant prévu TTC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pole__c</fullName>
        <formula>Facture__r.Pole__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pôle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrevADecaller__c</fullName>
        <formula>Date_prevue__c &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev. A Décaller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevision_encaissement__c</fullName>
        <formula>CASE(MONTH( Date_prevue__c  ),1,&apos;Janvier&apos;,2,&apos;Février&apos;,3,&apos;Mars&apos;,4,&apos;Avril&apos;,5,&apos;Mai&apos;,6,&apos;Juin&apos;,7,&apos;Juillet&apos;,8,&apos;Août&apos;,9,&apos;Septembre&apos;,10,&apos;Octobre&apos;,11,&apos;Novembre&apos;,12,&apos;Décembre&apos;,&apos;&apos;) + &apos; &apos; + TEXT(YEAR(Date_prevue__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prévision d&apos;encaissement</label>
        <type>Text</type>
    </fields>
    <label>Prévision d&apos;encaissement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Facture__c</columns>
        <columns>DIVISION</columns>
        <division>*</division>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>TAT</fullName>
        <columns>Facture__c</columns>
        <columns>DIVISION</columns>
        <columns>Date_prevue__c</columns>
        <columns>Montant_prevu_HT__c</columns>
        <columns>Montant_prevu_TTC__c</columns>
        <columns>Pole__c</columns>
        <division>*</division>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facture__c</field>
            <operation>startsWith</operation>
            <value>TAT</value>
        </filters>
        <label>TAT</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <displayFormat>Prev-{000000}</displayFormat>
        <label>N° Prévision</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prévisions d&apos;encaissement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>